@@ -1,0 +1,4 @@
+I want you to __re__read the article.
+You will find that she is _right_.
+Ba__boom__.
+&copy;__the authors__
