@@ -1,0 +1,7 @@
+**C**reate.
+**R**ead.
+**U**pdate.
+**D**elete.
+Also known as **CRUD**.
+Not to be confused with E**CRU**, which is a color.
+&reg;**CRUD** it is not.
